# xmlabsync

./: .gitignore  Makefile  README.rst
src/: CMakeLists.txt  absync.m  absyncconfig.h.in  xmlabsync.m  xmlabsyncconfig.h.in
src/google/: GTMStringEncoding.m
